@@ -1035,4 +1035,24 @@
       </packing>
     </child>
   </widget>
+  <widget class="GtkVBox" id="folder_vbox">
+    <property name="visible">True</property>
+    <property name="border_width">12</property>
+    <property name="orientation">vertical</property>
+    <child>
+      <widget class="GtkCheckButton" id="checkbutton_dir">
+        <property name="label" translatable="yes">_Include subfolders</property>
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="receives_default">False</property>
+        <property name="use_underline">True</property>
+        <property name="active">True</property>
+        <property name="draw_indicator">True</property>
+      </widget>
+      <packing>
+        <property name="expand">False</property>
+        <property name="position">0</property>
+      </packing>
+    </child>
+  </widget>
 </glade-interface>
